# EventTrip-AgentOS

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
app/: __init__.py  streamlit_app.py
data/: mock_flights.yaml  mock_hotels.yaml  mock_market_signals.yaml  mock_tickets.yaml  source_evidence.yaml  ticket_links.yaml  worldcup_houston_demo.yaml
docs/: api_adapter_design.md  architecture.md  dashboard_guide.md  demo_walkthrough.md  live_data_integration.md  mcp_validation.md  project_summary.md  release_v0_1_0.md  reviewed_quantitative_quotes.md  roadmap.md  source_backed_report.md  source_intake_workflow.md  source_registry_review_packaging.md  ticket_links.md  web_collection.md
eventtrip/: __init__.py  evidence_review.py  evidence_review_cli.py  html_report.py  live_data_cli.py  live_data_review.py  llm_client.py  markdown_io.py  market_snapshots.py  orchestrator.py  report_polisher.py  reviewed_quotes.py  reviewed_quotes_cli.py  schemas.py  scoring.py  snapshots_cli.py  source_backed_quotes.py  source_backed_quotes_cli.py  source_evidence.py  source_intake.py  source_intake_cli.py  source_report_cli.py  source_review_cli.py  source_review_packet.py  source_traceability.py  ticket_links.py  web_collect_cli.py
examples/: expected_final_report.md  expected_final_report_polished.md  external_snapshot_import.csv  external_snapshot_import.json  live_api_snapshot_response.json  mcp_client_config.example.json  mcp_client_validation_output.txt  reviewed_quote_import.csv  reviewed_quote_import.json  (+5 more)
(+69 files in other folders)
